Fix placement of rings on mobile

--- a/assets/styles/sass/global.scss
+++ b/assets/styles/sass/global.scss
@@ -356,11 +356,11 @@ footer {
 
     #about {
         font-size: 0.9em;
-        padding: 45px 0;
+        padding: 45px 0 35px 0;
         height: auto;
 
         .ring_wrapper {
-            margin: 0 auto -25px auto;
+            margin: 30px auto -35px auto;
         }
 
         .photo {
